<resources>
    <string name="app_name">Forecast</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="forecast_text">Forecast Search</string>
    <string name="street_text">Street</string>
    <string name="city_text">City</string>
    <string name="state_text">State</string>
    <string name="degree_text">Degree</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="about">About</string>
    <string name="powered_by">Powered By:</string>
    <string name="forecast.io">FORECAST.IO</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="name">Name: Tobias Lee</string>
    <string name="id">Student ID: 8011734618</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="details">More Details</string>
    <string name="map">View Map</string>
    <string name="facebook">Facebook</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="precipitation">Precipitation</string>
    <string name="rain">Chance of Rain</string>
    <string name="wind">Wind Speed</string>
    <string name="dew">Dew Point</string>
    <string name="humid">Humidity</string>
    <string name="vis">Visibility</string>
    <string name="rise">Sunrise</string>
    <string name="set">Sunset</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">1715119768722217</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="aeris_client_id">PsOTNfEJQmERqIBAOlJKQ</string>
    <string name="aeris_client_secret">wHBP7sQflsQlFEulY8BRPc9GrBQhxFMxT7SiJ7Kf</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
