<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="20dp"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forecast_text"
        android:id="@+id/forecast_text"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/street_text"
            android:id="@+id/street_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/street"
            android:layout_alignBottom="@+id/street_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/street_text"
            android:layout_toEndOf="@+id/street_text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/city_text"
            android:id="@+id/city_text"
            android:layout_below="@+id/street_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:layout_alignBottom="@+id/city_text"
            android:layout_alignRight="@+id/street"
            android:layout_alignEnd="@+id/street"
            android:layout_alignLeft="@+id/street"
            android:layout_alignStart="@+id/street"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/state_text"
            android:id="@+id/state_text"
            android:layout_below="@+id/city_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_alignBottom="@+id/state_text"
            android:layout_alignRight="@+id/city"
            android:layout_alignEnd="@+id/city"
            android:layout_alignTop="@+id/state_text"
            android:layout_alignLeft="@+id/city"
            android:layout_alignStart="@+id/city"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/degree_text"
            android:id="@+id/degree_text"
            android:layout_below="@+id/state_text"
            android:layout_alignLeft="@+id/state_text"
            android:layout_alignStart="@+id/state_text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/spinner"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/clear"
            android:layout_toRightOf="@+id/search"
            android:layout_toEndOf="@+id/search">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:id="@+id/fahrenheit"
                android:checked="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:id="@+id/celsius"
                android:checked="false" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/search"
            android:layout_below="@+id/degree_text"
            android:layout_alignLeft="@+id/degree_text"
            android:layout_alignStart="@+id/degree_text"
            android:onClick="validateAndSend"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:layout_below="@+id/degree_text"
            android:layout_centerHorizontal="true"
            android:onClick="clearSearch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/error"
            android:layout_below="@+id/search"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#FF0000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/about"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/degree_text"
            android:layout_alignEnd="@+id/degree_text"
            android:onClick="about"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/powered_by"
            android:id="@+id/powered_by"
            android:layout_above="@+id/forecast"
            android:layout_alignRight="@+id/spinner"
            android:layout_alignEnd="@+id/spinner"
            android:onClick="openForecast" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/forecast.io"
            android:id="@+id/forecast"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/spinner"
            android:layout_alignEnd="@+id/spinner"
            android:textStyle="bold"
            android:onClick="openForecast"/>

    </RelativeLayout>

</LinearLayout>